--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -24,20 +26,20 @@ button {
 }
 
 .comments-title {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .comment-form-row {
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 .message-input {
   flex-grow: 1;
   resize: none;
   height: 70px;
-  border-radius: .5em;
-  padding: .5em;
+  border-radius: 0.5em;
+  padding: 0.5em;
   font-size: inherit;
   font-family: inherit;
   border: 2px solid hsl(235, 50%, 74%);
@@ -54,11 +56,11 @@ button {
 }
 
 .mt-1 {
-  margin-top: .25rem;
+  margin-top: 0.25rem;
 }
 
 .comment-stack {
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 
 .comment-stack:last-child {
@@ -66,7 +68,7 @@ button {
 }
 
 .nested-comments {
-  padding-left: .5rem;
+  padding-left: 0.5rem;
   flex-grow: 1;
 }
 
@@ -79,7 +81,7 @@ button {
   background: none;
   padding: 0;
   width: 15px;
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   position: relative;
   cursor: pointer;
   outline: none;
@@ -92,7 +94,7 @@ button {
 }
 
 .collapse-line::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   bottom: 0;
@@ -109,12 +111,12 @@ button {
 .btn {
   --hue: 235;
   --color: hsl(var(--hue), 100%, 67%);
-  padding: .5em 1em;
+  padding: 0.5em 1em;
   background: var(--color);
   border: none;
   color: white;
-  border-radius: .5em;
-  font-size: .75em;
+  border-radius: 0.5em;
+  font-size: 0.75em;
   cursor: pointer;
 }
 
@@ -126,13 +128,13 @@ button {
 .btn.icon-btn {
   background: none;
   color: var(--color);
-  padding: .25em;
+  padding: 0.25em;
   display: flex;
   align-items: center;
 }
 
 .mr-1 {
-  margin-right: .25em;
+  margin-right: 0.25em;
 }
 
 .icon-btn:hover,
@@ -150,30 +152,30 @@ button {
 }
 
 .icon-btn-active::before {
-  content: "\00D7";
+  content: '\00D7';
   position: absolute;
-  font-size: .75em;
+  font-size: 0.75em;
   width: 1em;
   height: 1em;
   color: white;
   background-color: var(--color);
   border-radius: 50%;
-  bottom: .1em;
-  right: .1em;
+  bottom: 0.1em;
+  right: 0.1em;
 }
 
 .comment {
-  padding: .5rem;
+  padding: 0.5rem;
   border: 1px solid hsl(235, 100%, 90%);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 
 .comment .header {
   color: hsl(235, 50%, 67%);
   display: flex;
   justify-content: space-between;
-  margin-bottom: .25rem;
-  font-size: .75em;
+  margin-bottom: 0.25rem;
+  font-size: 0.75em;
 }
 
 .comment .header .name {
@@ -182,14 +184,14 @@ button {
 
 .comment .message {
   white-space: pre-wrap;
-  margin-left: .5rem;
-  margin-right: .5rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .comment .footer {
   display: flex;
-  gap: .5rem;
-  margin-top: .5rem;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .ml-3 {
